k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mrweb-deployment
  labels:
    app: mrweb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mrweb
  template:
    metadata:
      labels:
        app: mrweb
    spec:
      containers:
      - name: mrweb
        image: kklopfenstein/mrweb:v0
        ports:
        - containerPort: 80
