k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mrweb-service
spec:
  selector:
    app: mrweb
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: LoadBalancer
